<resources>
    <string name="app_name">Chordion</string>
    <string name="welcome_heading">Discover Chords\nFrom Your Smartphone</string>
    <string name="welcome_description">Learn to play all the chords you want with our chord library, more than thousand chords!</string>
    <string name="button_started">Let\'s Go</string>
    <string name="button_quit">Maybe another time</string>
    <string name="label_instruments">Instruments</string>
    <string name="label_genres">Genres</string>
    <string name="chords_gallery">Chords Gallery</string>
    <string name="button_new_chord">Add New Chord</string>
    <string name="violin">Violin</string>
    <string name="piano">Piano</string>
    <string name="guitar">Guitar</string>
    <string name="flute">Flute</string>
    <string name="good_morning">Good morning,</string>
    <string name="main_title_1">What Chord Would You</string>
    <string name="main_title_2">Love To Learn</string>
    <string name="pop">Pop</string>
    <string name="jazz">Jazz</string>
    <string name="classical">Classical</string>
    <string name="blues">Blues</string>
    <string name="rock">Rock</string>
    <string name="folk">Folk</string>
    <string name="edm">EDM</string>
    <string name="country">Country</string>
    <string name="go_to_home">Go To Home</string>
    <string name="form_title">Create New Chord Form</string>
    <string name="form_label_shortName">Chord Short Name:</string>
    <string name="shortname_hint">C</string>
    <string name="form_label_fullName">Chord Full Name:</string>
    <string name="fullName_hint">C Major</string>
    <string name="form_label_genres">Chord Genres</string>
    <string name="form_label_type">Chord Type</string>
    <string name="form_label_difficulty">Chord Difficulty</string>
    <string name="label_gallery">Go To Chord Gallery</string>
    <string name="label_description">Description</string>
    <string name="hint_description">What do you think about the chord?</string>
    <string name="button_create">Create</string>
    <string name="label_rating">Rating</string>
    <string name="label_instructions">How to play</string>
    <string name="label_difficult">Difficult</string>
    <string name="easy">Easy</string>
</resources>