<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ChordFormActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/background"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/accent"
                    android:drawableLeft="@drawable/dashboard"
                    android:onClick="navigateToHomeFromForm"
                    android:text="@string/go_to_home"
                    android:textAlignment="textStart" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/highlight"
                    android:drawableLeft="@drawable/list"
                    android:onClick="navigateToListFromForm"
                    android:text="@string/label_gallery"
                    android:textAlignment="textStart" />
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/form_title"
                android:textAlignment="center"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/form_label_shortName"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/formShortName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="C"
                    android:ems="5"
                    android:hint="@string/shortname_hint"
                    android:inputType="text"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/form_label_fullName"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/formFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="C Major"
                    android:ems="5"
                    android:hint="@string/fullName_hint"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:textSize="20sp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/label_instruments"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioPiano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/piano" />

                    <RadioButton
                        android:id="@+id/radioGuitar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/guitar" />

                    <RadioButton
                        android:id="@+id/radioViolin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/violin" />

                    <RadioButton
                        android:id="@+id/radioFlute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/flute" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/form_label_type"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMajor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="Major" />

                    <RadioButton
                        android:id="@+id/radioMinor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="Minor" />

                    <RadioButton
                        android:id="@+id/radioAugmented"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="Augmented" />

                    <RadioButton
                        android:id="@+id/radioDiminished"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="Diminished" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/form_label_difficulty"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioEasy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="Easy" />

                    <RadioButton
                        android:id="@+id/radioIntermediate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="Intermediate" />

                    <RadioButton
                        android:id="@+id/radioHard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="Hard" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/form_label_genres"
                android:textAlignment="center"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBoxPop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/pop" />

                    <CheckBox
                        android:id="@+id/checkBoxJazz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/jazz" />

                    <CheckBox
                        android:id="@+id/checkBoxClassical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/classical" />

                    <CheckBox
                        android:id="@+id/checkBoxFolk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/folk" />

                    <CheckBox
                        android:id="@+id/checkBoxCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/country" />

                    <CheckBox
                        android:id="@+id/checkBoxBlues"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/blues" />

                    <CheckBox
                        android:id="@+id/checkBoxEdm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/edm" />

                    <CheckBox
                        android:id="@+id/checkBoxRock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckBoxClicked"
                        android:text="@string/rock" />

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/label_rating"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/formRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFEB3B"
                    android:numStars="5"
                    android:rating="5" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/label_description"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/formDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="..."
                    android:hint="@string/hint_description"
                    android:gravity="top|start"
                    android:lines="4"
                    android:textSize="20sp"
                    android:inputType="textMultiLine"/>

            </LinearLayout>

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onAddBtnClicked"
                android:text="@string/button_create" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>
