<?xml version="1.0" encoding="utf-8"?>
<!--
  RMIT University Vietnam
  Course: COSC2657 - Android Development
  Semester: 2024C
  Assessment: Assignment 1
  Author: Nguyen Anh Duy
  ID: s3878141
  Created  date: 08/11/2024
  Last modified: 17/11/2024
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:gravity="center"
    tools:context=".WelcomeActivity" >

    <ImageView
        android:id="@+id/welcomeBanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/welcome_heading"
            android:textAlignment="center"
            android:textSize="30sp"
            app:lineHeight="35sp" />

        <TextView
            android:id="@+id/welcomeDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/welcome_description"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:onClick="navigateToHome"
            android:text="@string/button_started"
            android:textSize="18sp"
            app:cornerRadius="5sp" />

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:onClick="quit"
            android:text="@string/button_quit"
            android:textColor="#000000"
            android:textSize="18sp"
            app:cornerRadius="5dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />
    </LinearLayout>

</LinearLayout>